fix(tests): repair and refactor entire test suite
Repairs compilation and logic errors across all service and persistence tests. Corrects mock configurations, exception handling, and test data generation to ensure the test suite is stable and passes reliably.